# curl

./: .gitignore  README.md
UseCurl/: UseCurl.sln  build.sh  readme.txt
UseCurl/UseCurl/: UseCurl.vcxproj  UseCurl.vcxproj.filters  ~AutoRecover.UseCurl.vcxproj
UseCurl/src/: CMakeLists.txt  UseCurl.cpp  UseCurl.h  build_restart.sh  main.cpp  makefile  stop.sh  testCurl.cpp
UseCurl/vs/: premake5.lua
curl_test/: curl_test.sln
curl_test/curl_test/: curl_test.cpp  curl_test.vcxproj  curl_test.vcxproj.filters  mult_curl.cpp  mult_curl.h  mult_test.cpp
curl_test/lib/: libcurl.lib
